# ODDP

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  LICENSE  Makefile  README.md  clientStatistics_CFA.txt  clientStatistics_nearest.txt  dafd.sbatch  dafd_alloc.sh  statistics.txt  tuneKResults.txt
data/: ZipCodesChicago.json  allDurationsGenerated.csv  generated_customers.csv  stopData20MinutesGenerated.csv  zipbypopulation.csv
data/Polygon_1200s/: Polygon_1200s.shp  Polygon_1200s.shx
data/Polygon_1800s/: Polygon_1800s.shp  Polygon_1800s.shx
data/Polygon_900s/: Polygon_900s.dbf
data/animationData/: orders.txt  routes.txt
data/heatmapData/: wh_quad_assignment.txt
data/warehouseIsochrones/: isochroneWarehouse_1200s_0.json  (+28 more)
eval/: clientStatistics_CFA_grid.txt  clientStatistics_nearest_grid.txt  create_results_table.py  data_dafd.csv  read_result.py  visualizePolicies.py
instances/: Amazon.txt  Zip.txt  grid.txt  instance_grid.txt  instance_test.txt  instance_train.txt  instance_zip.txt  zip.txt
python/: convergencePlot.py  createInstance.py  drawData.py  generateCustomers.py  getDistancesAPI.py  isochroneAPI.py  mergeIsochrones.py  plotStatisAssignment.py  resultsTable.py  visualizeBestK.py  visualizeRejection.py  visualizeSimulation.py
results/: dafd_grid_1200_w_l_b_0.6_0.9.err  dafd_grid_1200_w_l_b_0.6_0.9.res  dafd_zip_1200_w_l_b_0.6_0.9.err  dafd_zip_1200_w_l_b_0.6_0.9.res
src/: Data.cpp  Data.h  Environment.cpp  Environment.h  Matrix.h  WQAssign.cpp  WQAssign.h  main.cpp
statistics/: false_1200_w_s_true_0.650000_1.000000.txt
